# cookiecutter-fastapi-ai-backend

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  USAGE_GUIDE.md  docker-compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.json  post-create.sh
{{cookiecutter.project_slug}}/deploy/nginx/: nginx.conf
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __init__.py  main.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/mcp/: __init__.py  placeholder.py
